# shimmer

./: .gitignore  Makefile  README.md  shimmer.cabal
doc/: Grammar.md  Primitives.md  Serial.md
icebox/: Parser.hs  Pretty.hs
icebox/Codec/: Peek.hs  Word.hs
make/: build.mk  config.mk
src/: Main.hs
src/SMR/CLI/: Config.hs  Help.hs  Repl.hs
src/SMR/CLI/Driver/: Load.hs
src/SMR/Codec/: Peek.hs  Poke.hs  Size.hs
src/SMR/Core/: Exp.hs  Step.hs
src/SMR/Core/Exp/: Base.hs  Compounds.hs  Push.hs  Train.hs
src/SMR/Data/: Bag.hs  Located.hs
src/SMR/Prim/: Name.hs  Op.hs
src/SMR/Prim/Op/: Base.hs  Bool.hs  List.hs  Match.hs  Nat.hs  Nom.hs  Sym.hs
src/SMR/Source/: Expected.hs  Lexer.hs  Parsec.hs  Parser.hs  Pretty.hs  Token.hs
src/shimmer/: LICENSE  Main.hs  shimmer.cabal
src/shimmer-test/: Main.hs
src/shimmer-test/SMR/Test/: Gen.hs
src/shimmer/SMR/CLI/: Config.hs  Help.hs  Repl.hs
src/shimmer/SMR/CLI/Driver/: Load.hs
src/shimmer/SMR/Codec/: Peek.hs  Poke.hs  Size.hs
src/shimmer/SMR/Core/: Codec.hs  Eval.hs  Exp.hs  Prim.hs  Step.hs  World.hs
src/shimmer/SMR/Core/Codec/: Peek.hs  Poke.hs  Size.hs
src/shimmer/SMR/Core/Exp/: Base.hs  Compounds.hs  Patterns.hs
src/shimmer/SMR/Core/Prim/: Base.hs  Bool.hs  List.hs  Match.hs  Nat.hs  Nom.hs  Sym.hs
src/shimmer/SMR/Prim/: Name.hs  Op.hs
src/shimmer/SMR/Prim/Op/: Base.hs  Bool.hs  Match.hs
src/shimmer/SMR/Source/: Expected.hs  Lexer.hs  Loader.hs  Parsec.hs  Parser.hs  Pretty.hs  Prim.hs
test/: Church.smr  Expression.smr  Factorial.smr  Optimise.smr  Simple.smr
