name:           shimmer
version:        0.1
license:        MIT
license-file:   LICENSE
author:         Ben Lippmeier <benl@ouroborus.net>
maintainer:     Ben Lippmeier <benl@ouroborus.net>
build-type:     Simple
cabal-version:  >=1.6
category:       Compilers/Interpreters
description:    The Lambda Machine
synopsis:       The Lambda Machine

library
 hs-source-dirs:
        src

 build-depends:
        base            >= 4.10 && < 4.11,
        text            >= 1.2  && < 1.3,
        vector          >= 0.12 && < 0.13,
        containers      >= 0.5  && < 0.6

 exposed-modules:
        SMR.Core.Exp

        SMR.Data.Bag
        SMR.Data.Located

        SMR.Prim.Name
        SMR.Prim.Op

        SMR.Source.Expected
        SMR.Source.Lexer
        SMR.Source.Parsec
        SMR.Source.Parser
        SMR.Source.Pretty
        SMR.Source.Token

 other-modules:
        SMR.Core.Exp.Base
        SMR.Core.Exp.Compounds
        SMR.Core.Exp.Push
        SMR.Core.Exp.Train

        SMR.Prim.Op.Base
        SMR.Prim.Op.Bool
        SMR.Prim.Op.Nat

 extensions:
        PatternGuards
        OverloadedStrings
